Gap fix attempt #4

--- a/public/css/index-styles.css
+++ b/public/css/index-styles.css
@@ -1392,6 +1392,12 @@
     padding: 3rem 0 1rem 0 !important;
     margin-bottom: -2px !important;
   }
+  .wave-light-bg {
+    margin-bottom: -2px !important;
+  }
+  .content-container {
+    margin-bottom: -2px !important;
+  }
   /* .content-container {
     margin-bottom: -5px !important;
   } */
@@ -1576,6 +1582,12 @@
 /* Small Mobile (below 320px) */
 @media screen and (max-width: 319px) {
   .hero {
+    margin-bottom: -2px !important;
+  }
+  .wave-light-bg {
+    margin-bottom: -2px !important;
+  }
+  .content-container {
     margin-bottom: -2px !important;
   }
   .hero-container {
